refactor dependency implementation